MillBuild/Testing/generated/err4/err4.output
Grammar

    0 $accept: ListInt $end

    1 ListInt: S_1

    2 S_1_E: S_1_E INT
    3      | INT

    4 S_1: S_1_E


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    INT (258) 2 3


Nonterminals, with rules where they appear

    $accept (4)
        on left: 0
    ListInt (5)
        on left: 1
        on right: 0
    S_1_E (6)
        on left: 2 3
        on right: 2 4
    S_1 (7)
        on left: 4
        on right: 1


State 0

    0 $accept: • ListInt $end

    INT  shift, and go to state 1

    ListInt  go to state 2
    S_1_E  go to state 3
    S_1  go to state 4


State 1

    3 S_1_E: INT •

    $default  reduce using rule 3 (S_1_E)


State 2

    0 $accept: ListInt • $end

    $end  shift, and go to state 5


State 3

    2 S_1_E: S_1_E • INT
    4 S_1: S_1_E •

    INT  shift, and go to state 6

    $default  reduce using rule 4 (S_1)


State 4

    1 ListInt: S_1 •

    $default  reduce using rule 1 (ListInt)


State 5

    0 $accept: ListInt $end •

    $default  accept


State 6

    2 S_1_E: S_1_E INT •

    $default  reduce using rule 2 (S_1_E)
